Version 0.7.2 (2023-07-06)
--------------------------
Bump Go Version to 1.20 (#34)
Bump dependencies for Snyk (#33)
Fix Denial of Service (DoS) in golang.org/x/net/http2/hpack (#32)
Fix Denial of Service (DoS) in golang.org/x/net/http2 (#31)

Version 0.7.1 (2023-01-02)
--------------------------
Bump dependencies for Snyk (#28)

Version 0.7.0 (2022-09-21)
--------------------------
Fix typo in docs (#24)
Bump Go Version to 1.18 (#25)
Bump copyright to 2019-2022 (#26)

Version 0.6.0 (2021-08-17)
--------------------------
Add Darwin arm64 support (#22)

Version 0.5.0 (2021-06-23)
--------------------------
Bump dependencies (#20)

Version 0.4.0 (2021-06-07)
--------------------------
Add ability to override provider settings in the resource (#18)

Version 0.3.2 (2020-09-30)
--------------------------
Adding GoReleaser support (#15)
Adding terraform-compatible documentation (#16)

Version 0.3.1 (2020-09-23)
--------------------------
Migrate CI/CD to Github actions (#13)
Add Snyk monitoring (#12)
Remove Vagrant (#11)

Version 0.3.0 (2020-09-08)
--------------------------
Bump Terraform version to support v0.12+ (#9)

Version 0.2.0 (2020-05-16)
--------------------------
Migrate to go mods and update dependencies (#4)
Update copyright to 2019-2020 (#5)

Version 0.1.1 (2019-12-26)
--------------------------
Dep installation fails on first-time vagrant up (#1)

Version 0.1.0 (2019-08-02)
--------------------------
Initial release