@@ -1,5 +1,5 @@
 //
-// Copyright (c) 2019-2022 Snowplow Analytics Ltd. All rights reserved.
+// Copyright (c) 2019-2023 Snowplow Analytics Ltd. All rights reserved.
 //
 // This program is licensed to you under the Apache License Version 2.0,
 // and you may not use this file except in compliance with the Apache License Version 2.0.
